translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-01-31 23:25+0000\n"
+"PO-Revision-Date: 2022-02-05 16:28+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
@@ -942,15 +942,15 @@ msgid "  --title <title>          Title for this destination file.\n"
 msgstr "  --title <títol>          Títol per al fitxer de destinació.\n"
 
 #: src/merge/mkvmerge.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-enabled-flag <TID[:bool]>\n"
 "                           Sets the \"track enabled\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
-"  --commentary-track <TID[:booleà]>\n"
-"                           Estableix l'etiqueta «Comentari» per a aquesta pista\n"
-"                           o l'obliga a no estar present si el booleà és 0.\n"
+"  --track-enabled-flag <TID[:bool]>\n"
+"                           Estableix l'etiqueta «Pista habilitada» o la força\n"
+"                           si no està present o si és 0.\n"
 
 #: src/merge/mkvmerge.cpp:261
 #, no-c-format
@@ -8436,9 +8436,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr "ID del còdec amb format incorrecte «{0}».\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Marca aquesta pista com a «Força el mostrar»."
+msgstr "Marqueu aquesta pista com a «Habilitada» (el valor predeterminat) o «Inhabilitada». "
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9684,7 +9684,7 @@ msgstr "Reprodueix el fitxer d'àudio «%1»"
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "Els reproductors només haurien de tenir en compte per a reproducció les pistes habilitades."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
