translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-02-01 20:10+0000\n"
+"PO-Revision-Date: 2022-02-05 18:00+0000\n"
 "Last-Translator: overdrive80 <lukillas.ole@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
@@ -948,15 +948,16 @@ msgid "  --title <title>          Title for this destination file.\n"
 msgstr "  --title <title>          Título para el archivo de salida.\n"
 
 #: src/merge/mkvmerge.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-enabled-flag <TID[:bool]>\n"
 "                           Sets the \"track enabled\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
-"  --commentary-flag <TID[:bool]>\n"
-"                           Establece para esta pista el indicador \"comentario\" o\n"
-"                           evita que esté presente si bool es 0.\n"
+"  --track-enabled-flag <TID[:bool]>\n"
+"                           Establece para esta pista el indicador \n"
+"                           \"pista habilitada\" o evita que esté presente \n"
+"                           si bool es 0.\n"
 
 #: src/merge/mkvmerge.cpp:261
 #, no-c-format
@@ -8449,9 +8450,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr "ID del codec erróneo '{0}'.\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Marcar esta pista como \"visualización forzada\"."
+msgstr "Señala esta pista como \"habilitada\" (por defecto) o \"deshabilitada\"."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9696,7 +9697,7 @@ msgstr "Reproducir audio '%1'"
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "Los reproductores sólo deberían tener en cuenta las pistas habilitadas para la reproducción."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
