translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: mkvtoolnixgui\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-01-31 09:51+0000\n"
+"PO-Revision-Date: 2022-02-05 19:21+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
@@ -892,15 +892,15 @@ msgid "  --title <title>          Title for this destination file.\n"
 msgstr "  --title <title>          Le titre pour ce fichier destination.\n"
 
 #: src/merge/mkvmerge.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-enabled-flag <TID[:bool]>\n"
 "                           Sets the \"track enabled\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
-"  --commentary-flag <TID[:bool]>\n"
-"                           Pose l'indicateur « Commentaire » pour cette piste ou\n"
-"                            l'oblige à ne pas être présent si bool est 0.\n"
+"  --track-enabled-flag <TID[:bool]>\n"
+"                           Pose l'indicateur « Piste activée » pour cette piste ou\n"
+"                           l'oblige à ne pas être présent si bool est 0.\n"
 
 #: src/merge/mkvmerge.cpp:261
 #, no-c-format
@@ -8372,9 +8372,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr "Identifiant de codec « {0} » mal formé.\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Marquer cette piste comme « Affichage forcé »."
+msgstr "Marque cette piste comme « activée » (par défaut) ou « désactivée »."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9619,7 +9619,7 @@ msgstr "Jouer le fichier audio « %1 »"
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "Les lecteurs devraient seulement considérer les pistes activées pour la lecture."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
