translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-01-31 06:12+0000\n"
+"PO-Revision-Date: 2022-02-05 20:00+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -422,7 +422,7 @@ msgid ""
 msgstr ""
 "  --default-track-flag <TID[:bool]>\n"
 "                           Imposta il flag \"traccia predefinita\" per questa traccia o\n"
-"                           lo forza a non presente se è 0.\n"
+"                           lo forza a non presente se bool è a 0.\n"
 
 #: src/merge/mkvmerge.cpp:394
 #, no-c-format
@@ -900,14 +900,14 @@ msgid "  --title <title>          Title for this destination file.\n"
 msgstr "  --title <titolo>          Titolo per il file destinazione.\n"
 
 #: src/merge/mkvmerge.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-enabled-flag <TID[:bool]>\n"
 "                           Sets the \"track enabled\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
-"  --commentary-flag <TID[:bool]>\n"
-"                           Imposta il flag \"commento\" per questa traccia o\n"
+"  --track-enabled-flag <TID[:bool]>\n"
+"                           Imposta il flag \"traccia abilitata\" per questa traccia o\n"
 "                           lo forza a non presente se bool è 0.\n"
 
 #: src/merge/mkvmerge.cpp:261
@@ -8381,9 +8381,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr "ID errato codec '{0}'.\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Contrassegna questa traccia come \"Visualizzazione forzata\"."
+msgstr "Contrassegna questa traccia come \"abilitata\" (impostazione predefinita) o \"disabilitata\"."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9628,7 +9628,7 @@ msgstr "Riproduci file audio '%1'"
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "I riproduttori dovrebbero considerare solo le tracce abilitate per la riproduzione."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
