man page translations: update Italian

--- a/doc/man/po4a/po/it.po
+++ b/doc/man/po4a/po/it.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-05 16:33+0100\n"
-"PO-Revision-Date: 2021-07-26 09:20+0000\n"
-"Last-Translator: Paride Barison\n"
+"PO-Revision-Date: 2022-02-06 11:21+0000\n"
+"Last-Translator: Ioma Taani\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/it/)\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -38,10 +38,8 @@ msgstr "64.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2019-12-06"
 msgid "2021-12-27"
-msgstr "2019-12-06"
+msgstr "2021-12-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1743,17 +1741,17 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:247
 msgid "<option>--generate-chapters</option> <parameter>mode</parameter>"
-msgstr ""
+msgstr "<option>--generate-chapters</option> <parameter>modalità</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:250
 msgid "&mkvmerge; can create chapters automatically.  The following two modes are currently supported:"
-msgstr ""
+msgstr "&mkvmerge; può creare capitoli automaticamente. Attualmente sono supportate le seguenti modalità:"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><itemizedlist><listitem><para>
 #: doc/man/mkvmerge.xml:256
 msgid "'<literal>when-appending</literal>' – This mode creates one chapter at the start and one chapter whenever a file is appended."
-msgstr ""
+msgstr "'<literal>when-appending</literal>' – Questa modalità crea un capitolo all’inizio e un capitolo quando un file viene aggiunto."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><itemizedlist><listitem><para>
 #: doc/man/mkvmerge.xml:260
