translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.8.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-01-31 16:01+0000\n"
+"PO-Revision-Date: 2022-02-05 17:04+0000\n"
 "Last-Translator: BouRock\n"
 "Language-Team: Turkish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/tr/)\n"
@@ -889,14 +889,14 @@ msgid "  --title <title>          Title for this destination file.\n"
 msgstr "  --title <başlık>          Bu hedef dosya için başlık.\n"
 
 #: src/merge/mkvmerge.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-enabled-flag <TID[:bool]>\n"
 "                           Sets the \"track enabled\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
 msgstr ""
-"  --commentary-flag <TID[:bool]>\n"
-"                           Bu iz için \"yorum\" işaretini ayarlar veya\n"
+"  --track-enabled-flag <TID[:bool]>\n"
+"                           Bu iz için \"iz etkinleştirildi\" işaretini ayarlar veya\n"
 "                           bool 0 ise mevcut olmamaya zorlar.\n"
 
 #: src/merge/mkvmerge.cpp:261
@@ -8361,9 +8361,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr "Arızalanmış kodek id '{0}'.\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Bu izi \"zorlanan görüntü\" olarak işaretler."
+msgstr "Bu izi \"etkinleştirildi\" (varsayılan) veya \"etkisizleştirildi\" olarak işaretleyin."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9608,7 +9608,7 @@ msgstr "'%1' ses dosyasını çal"
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "Oynatıcılar sadece oynatma için etkinleştirilmiş izleri göz önünde bulundurmalıdır."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
