--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (65.0.0-0~bunkus01) impish; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 06 Feb 2022 13:30:23 +0100
+
 mkvtoolnix (64.0.0-0~bunkus01) impish; urgency=low
 
   * New version.
