translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-01-30 21:27+0100\n"
-"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
+"PO-Revision-Date: 2022-02-15 08:58+0000\n"
+"Last-Translator: Калин Младенов <kalinm@gbg.bg>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
@@ -168,6 +168,8 @@ msgid ""
 "  --blockadd <TID:x>       Sets the max number of block additional\n"
 "                           levels for this track.\n"
 msgstr ""
+"  --blockadd <TID:x>       Задава макс. брой допълнителни блокове\n"
+"                           нива за тази пътечка.\n"
 
 #: src/merge/mkvmerge.cpp:382
 #, no-c-format
