--- a/po/ru.po
+++ b/po/ru.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-05 16:40+0100\n"
-"PO-Revision-Date: 2022-01-31 00:27+0000\n"
-"Last-Translator: Andrei Stepanov\n"
+"PO-Revision-Date: 2022-02-06 18:43+0000\n"
+"Last-Translator: solokot <solokot@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -701,12 +701,12 @@ msgid "  --title <title>          Title for this destination file.\n"
 msgstr "  --title <title> - Устанавливает название для этого файла назначения.\n"
 
 #: src/merge/mkvmerge.cpp:241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-enabled-flag <TID[:bool]>\n"
 "                           Sets the \"track enabled\" flag for this track or\n"
 "                           forces it not to be present if bool is 0.\n"
-msgstr "  --commentary-flag <TID[:bool]> - Устанавливает флаг \"комментарий\" этой дорожке или принудительно убирает его, если логический параметр равен 0.\n"
+msgstr "  --track-enabled-flag <TID[:bool]> - Устанавливает для этой дорожки флаг \"дорожка включена» или отключает её, если логическое значение равно 0.\n"
 
 #: src/merge/mkvmerge.cpp:261
 #, no-c-format
@@ -8161,9 +8161,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr "Неправильный идентификатор кодека \"{0}\".\n"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Отметить эту дорожку для \"принудительного показа\"."
+msgstr "Отметить эту дорожку как \"включённую\" (по умолчанию) или \"отключённую\"."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9418,7 +9418,7 @@ msgstr "Воспроизвести \"%1\""
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "Проигрыватели должны учитывать только включённые дорожки для воспроизведения."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
