man page translations: update Bulgarian

--- a/doc/man/po4a/po/bg.po
+++ b/doc/man/po4a/po/bg.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-12 10:41+0100\n"
-"PO-Revision-Date: 2021-09-22 10:25+0000\n"
-"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
+"PO-Revision-Date: 2022-02-12 11:26+0000\n"
+"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
@@ -1513,7 +1513,7 @@ msgstr "Обединяване на мултимедийни потоци в &ma
 #. type: Content of: <refentry><refsynopsisdiv><cmdsynopsis>
 #: doc/man/mkvmerge.xml:51
 msgid "<command>mkvmerge</command> <arg>global options</arg> <arg choice=\"req\">-o out</arg> <arg>options1</arg> <arg choice=\"req\">file1</arg> <arg> <arg>options2</arg> <arg choice=\"req\">file2</arg> </arg> <arg>@options-file.json</arg>"
-msgstr ""
+msgstr "<command>mkvmerge</command> <arg>глобални опции</arg> <arg choice=\"req\">-o out</arg> <arg>опции1</arg> <arg choice=\"req\">файл1</arg> <arg> <arg>опции2</arg> <arg choice=\"req\">файл2</arg> </arg> <arg>@файл-с-опции.json</arg>"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:67
@@ -3573,7 +3573,7 @@ msgstr "Употреба"
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2346
 msgid "For each file the user can select which tracks &mkvmerge; should take.  They are all put into the file specified with <option>-o</option>. A list of known (and supported) source formats can be obtained with the <option>-l</option> option."
-msgstr ""
+msgstr "За всеки файл потребителят може да избере кои пътечки да вземе &mkvmerge;.  С <option>-o</option> всички биват сложени в посочения файл. Списък с известни (и поддържани) формати на източници може да бъде получен чрез опцията <option>-l</option>."
 
 #. type: Content of: <refentry><refsect1><title>
 #: doc/man/mkvmerge.xml:2359
@@ -3615,7 +3615,7 @@ msgstr ""
 #: doc/man/mkvmerge.xml:2397
 #, no-wrap
 msgid "$ mkvmerge -o output.mkv --language 0:fre français.ogg --language 0:deu deutsch.ogg"
-msgstr ""
+msgstr "$ mkvmerge -o изход.mkv --language 0:fre français.ogg --language 0:bul български.ogg"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2403
@@ -3653,7 +3653,7 @@ msgstr "$ mkvmerge -o МоетоКлипче-със-звук.mkv -A МоетоК
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvmerge.xml:2423
 msgid "After some minutes of consideration you rip another audio track, e.g.  the director's comments or another language to '<literal>MyMovie-add-audio.wav</literal>'.  Encode it again and join it up with the other file:"
-msgstr ""
+msgstr "След още обмисляне решаваш да извлечеш друга аудио пътечка, било то „коментарите на режисьора“ или друг език,  в „<literal>МоетоКлипче-добави-аудио.wav</literal>“.  Пак го преформатирай и обедини с другия файл:"
 
 #. type: Content of: <refentry><refsect1><screen>
 #: doc/man/mkvmerge.xml:2427
