man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-12 10:41+0100\n"
-"PO-Revision-Date: 2022-02-05 19:25+0000\n"
+"PO-Revision-Date: 2022-02-12 14:41+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
@@ -42,7 +42,7 @@ msgstr "65.0.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2022-02-06"
-msgstr ""
+msgstr "06-02-2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
