man page translations: update Chinese Traditional

--- a/doc/man/po4a/po/zh_TW.po
+++ b/doc/man/po4a/po/zh_TW.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-12 10:41+0100\n"
-"PO-Revision-Date: 2021-02-03 18:47+0000\n"
-"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
+"PO-Revision-Date: 2022-02-19 06:31+0000\n"
+"Last-Translator: Chun-Kai Mao <chunkai.mao@gmail.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/zh_TW/)\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgstr "65.0.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2022-02-06"
-msgstr ""
+msgstr "中華民國 111年二月06日"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1299,7 +1299,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:66
 msgid "<option>-a</option>, <option>--all</option>"
-msgstr ""
+msgstr "<option>-a</option>, <option>--all</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:69
@@ -1319,7 +1319,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:85
 msgid "<option>-o</option>, <option>--continue</option>"
-msgstr ""
+msgstr "<option>-o</option>, <option>--continue</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:88
@@ -1329,7 +1329,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:95
 msgid "<option>-p</option>, <option>--hex-positions</option>"
-msgstr ""
+msgstr "<option>-p</option>, <option>--hex-positions</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:98
@@ -1339,7 +1339,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:104
 msgid "<option>-P</option>, <option>--positions</option>"
-msgstr ""
+msgstr "<option>-P</option>, <option>--positions</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:107
