man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-20 11:24+0100\n"
-"PO-Revision-Date: 2022-02-05 16:23+0000\n"
+"PO-Revision-Date: 2022-02-23 22:18+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
@@ -38,10 +38,8 @@ msgstr "65.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2019-12-06"
 msgid "2022-02-06"
-msgstr "2019-12-06"
+msgstr "06/02/2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
