translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-02-28 21:07+0100\n"
-"PO-Revision-Date: 2022-02-06 18:43+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>\n"
+"PO-Revision-Date: 2022-02-28 22:14+0000\n"
+"Last-Translator: Andrei Stepanov\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -3989,7 +3989,7 @@ msgstr "Про&должить"
 #: src/mkvtoolnix-gui/forms/util/text_display_dialog.h:81
 #, no-c-format
 msgid "C&opy to clipboard"
-msgstr "&Копировать в буфер"
+msgstr "&Копировать в буфер обмена"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2072
 #, no-c-format
@@ -10926,9 +10926,9 @@ msgid "Simple chapter parser: {0}\n"
 msgstr "Простой анализатор глав: {0}\n"
 
 #: src/mpegparser/M2VParser.cpp:416
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Single field picture detected. Fix the MPEG2 video stream before attempting to multiplex it.\n"
-msgstr "Обнаружен кадр с одним полем до заголовка GOP. Исправьте видеопоток MPEG2, прежде чем пытаться обработать его.\n"
+msgstr "Обнаружено изображение одного поля. Исправьте видеопоток MPEG2, прежде чем пытаться его мультиплексировать.\n"
 
 #: src/mkvtoolnix-gui/forms/merge/select_disc_library_information_dialog.h:73
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:306
