--- a/doc/man/po4a/po/bg.po
+++ b/doc/man/po4a/po/bg.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-02-20 11:24+0100\n"
-"PO-Revision-Date: 2022-02-12 11:26+0000\n"
-"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
+"PO-Revision-Date: 2022-03-05 20:06+0000\n"
+"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
@@ -2807,7 +2807,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1417
 msgid "Only tracks whose &quot;track enabled&quot; flag is set should be considered for playback."
-msgstr ""
+msgstr "Само пътечки със зададен флаг „включено“ би трябвало да бъдат взимани предвид при възпроизвеждане."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1427
