translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-05 14:43+0100\n"
-"PO-Revision-Date: 2022-02-15 08:58+0000\n"
-"Last-Translator: Калин Младенов <kalinm@gbg.bg>\n"
+"PO-Revision-Date: 2022-03-05 20:11+0000\n"
+"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
@@ -1353,9 +1353,9 @@ msgstr "Флаг „пътечката е включена“"
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:312
 #: src/mkvtoolnix-gui/forms/merge/tab.h:1823
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:87
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "\"Track enabled\" flag:"
-msgstr "Флаг „пътечката е включена“"
+msgstr "Флаг „включена пътечка“:"
 
 #: src/common/kax_element_names.cpp:215
 #: src/common/property_element.cpp:140
@@ -3554,9 +3554,9 @@ msgid "Always enable copying for all tracks of the following types regardless of
 msgstr "Винаги включвай копирането на всички медия пътечки от следните типове, без значение езика им:"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:257
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Always s&kip files"
-msgstr "Винаги питай потребителя"
+msgstr "Винаги &пропускай файлове"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2095
 #, no-c-format
@@ -6067,7 +6067,7 @@ msgstr "Грешка на ред {0}: би трябвало да има SRT вр
 #: src/input/subtitles.cpp:174
 #, no-c-format
 msgid "Error in line {0}: expected subtitle number and found some text.\n"
-msgstr ""
+msgstr "Грешка на ред {0}: очакван номер на субтитра вместо текст.\n"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:549
 #: src/mkvtoolnix-gui/merge/tab.cpp:175
@@ -7969,9 +7969,9 @@ msgstr "Избран по-долу език"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2075
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Language shortcuts"
-msgstr "Езици"
+msgstr "Езикови преки пътища"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:308
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2173
@@ -8248,9 +8248,9 @@ msgid "Malformed codec id '{0}'.\n"
 msgstr ""
 
 #: src/mkvtoolnix-gui/merge/input.cpp:479
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Mark this track as \"enabled\" (the default) or \"disabled\"."
-msgstr "Маркирай тази пътечка като съдържаща задължително показващи се елементи."
+msgstr "Отбелязване на пътечката като „включена“ (по подразбиране) или „изключена“."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:475
 #, no-c-format
@@ -9495,7 +9495,7 @@ msgstr "Възпроизвеждане на аудиофайл „%1“"
 #: src/mkvtoolnix-gui/merge/input.cpp:480
 #, no-c-format
 msgid "Players should only consider enabled tracks for playback."
-msgstr ""
+msgstr "При възпроизвеждане, плеърите би трябвало да взимат предвид само включените пътечки."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:472
 #, no-c-format
